--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "homepage": "http://framework.zend.com/",
     "license": "BSD-3-Clause",
     "require": {
-        "php": ">=5.2.11"
+        "php": ">=5.2.11",
+        "google/apiclient": "^2.0"
     },
     "autoload": {
         "psr-0": {
